--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="./imgs/accessories/E__1_-removebg-preview.png" alt="Logo" height="80">
   </a>
   <div class="ml-auto">
-      <button class="btn btn-outline-primary" onclick="redirectTo('login.html')">Login</button>
+      <button class="btn btn-outline-primary" onclick="redirectTo('Login.html')">Login</button>
       <button class="btn btn-outline-success" onclick="redirectTo('register.html')">Register</button>
       <!-- <div class="d-inline-block ml-3">
           <i class="fas fa-shopping-cart" style="position: relative; cursor: pointer;" onclick="redirectTo('cart.html')">
